# MPV2-panel-de-personas

./: .acrignore  .dockerignore  .gitignore  Dockerfile  apuntes de biceps.txt  ayuda despliegue local.txt  main.py  parquet_schema.json  pasos para deploy.txt  pyproject.toml
backend/: app-backup-local.py  app.py  datos_personas.xlsx
backend/tests/: __init__.py  test_api_integration.py  test_data_loading.py
backend/utils/: __init__.py  azure_storage.py  rut_validator.py
deploy/: .sufijo  deploy.sh  setup_azure.sh  upload_new_parquets.sh
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: TRANSFERENCIA_TECNOLOGICA.md  evaluacion_arquitectura.md  evaluacion_arquitectura.md.metadata.json  evaluacion_arquitectura.md.resolved  evaluacion_arquitectura.md.resolved.0  implementation_plan.md
frontend/: debug.html  index.html
infra/: main.bicep  parameters.prod.json
infra/modules/: acr.bicep  containerapp-backend.bicep  containerapp-env.bicep  containerapp-frontend.bicep  identity.bicep  keyvault.bicep  loganalytics.bicep  storage.bicep
mpv2_panel_de_personas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
